# pictures0

./: .gitignore  Dockerfile  docker-compose.yaml  gpt.md  memo.md  references.md  todo.md
backend/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
backend/routers/: gcs_router.py
backend/services/: gcs_service.py
backend/tests/api-tests/: gcs.http
backend/utils/: gcs_client.py  load_env.py  metadata.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: file_upload.tsx
scripts/: promptize.sh
