[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "google-auth>=2.38.0",
    "google-cloud-storage>=3.0.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff.lint]
select = ["RUF", "I", "UP", "SIM", "FURB", "PIE", "PERF", "C4", "B", "PL", "S"]
ignore = ["B008"]
